[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for cap-std"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "cap-std-ext"
readme = "README.md"
repository = "https://github.com/cgwalters/cap-std-ext"
version = "0.25.0"

[dependencies]
cap-std = { git = "https://github.com/bytecodealliance/cap-std", branch = "rustix-0.35.6-beta.2" }
cap-tempfile = { git = "https://github.com/bytecodealliance/cap-std", branch = "rustix-0.35.6-beta.2" }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6-beta.2", features = ["process"] }
#rustix = { git = "https://github.com/bytecodealliance/rustix", features = ["procfs"] }

[dev-dependencies]
anyhow = "1.0"
